[package]
name = "dircpy_copy_overwrite_error_repro"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.87"
dircpy_upstream = { package = "dircpy", version = "0.3.19", optional = true }
dircpy_fork = { package = "dircpy", git = "https://github.com/catuhana/dircpy", optional = true }
env_logger = "0.11.5"
liblzma = "0.3.4"
tar = "0.4.41"
ureq = "2.10.1"

[features]
default = []
dircpy_upstream = ["dep:dircpy_upstream"]
dircpy_fork = ["dep:dircpy_fork"]
